--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit
+          pip install pytest
 
       - name: Install pre-commit hooks
         run: pre-commit install
