--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit
-          pip install pytest
+          pip install pre-commit pytest celery
 
       - name: Install pre-commit hooks
         run: pre-commit install
