--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit pytest celery pydantic email-validator redis fastapi httpx
+          pip install pre-commit pytest celery pydantic email-validator redis fastapi httpx pandas
 
       - name: Install pre-commit hooks
         run: pre-commit install
